Font changes and alignment fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,7 @@ h1 a, h2 a {
 
 p.character {
 font-size:1.8em;
-text-align: centre;
+text-align: center;
 padding-bottom: 1rem;
 }
 
@@ -93,6 +93,7 @@ font-weight: 500;
 
 p.verseline {
 margin: 0 12px 0 60px;
+font-size: 1.4em;
 }
 
 span.character_role {
